@@ -41,7 +41,7 @@
 
 
 (defun elisp-koans//load-koan-group (group)
-  "Load a koan group from `elisp-koans--groups-directory'."
+  "Load a koan GROUP from `elisp-koans--groups-directory'."
   (let* ((file-name (concat (symbol-name group) ".el"))
          (file-path (concat (file-name-as-directory elisp-koans--groups-directory) file-name)))
     (load-file file-path)))
@@ -57,8 +57,23 @@
       (cons next-head (elisp-koans//replace test substitution tail)))))
 
 
+(defun elisp-koans//select-group (prefix-arg)
+  "Select a koan group from `elisp-koans-groups' if PREFIX-ARG."
+  (if prefix-arg
+      (list (completing-read "Select koan group: "
+                             (mapcar #'symbol-name elisp-koans-groups)))
+    '()))
+
+
+(defun elisp-koans//boundp (symbol)
+  "Return non-nil if SYMBOL names an `elisp-koans' test."
+  (and (ert-test-boundp symbol)
+       (string-prefix-p "elisp-koans/" (symbol-name symbol))))
+
+
 ;; main interface
 
+;;;###autoload
 (defmacro elisp-koans/deftest (name args &rest form)
   "Define a test called NAME with DESCRIPTION and a body of FORM.
 
@@ -70,11 +85,40 @@ This wraps `ert-deftest' with a check for blanks."
         form)))
 
 
+;;;###autoload
 (defun elisp-koans/load-groups (&optional koans)
-  "Load KOANS from the groups specified in `elisp-koans-groups'."
-  (interactive)
+  "Load KOANS from the groups specified in `elisp-koans-groups'.
+
+If called as an interactive function with a prefix argument the
+caller is asked for the koan group to load."
+  (interactive (list (elisp-koans//select-group current-prefix-arg)))
   (dolist (koan-group elisp-koans-groups)
     (elisp-koans//load-koan-group koan-group)))
+
+
+;;;###autoload
+(defun elisp-koans/run-tests (&optional koans)
+  "Run the tests in KOANS. If no koans are provided all of the
+`elisp-koan' tests are run.
+
+If called as an interactive function with a prefix argument the
+caller is asked for the koan group to test."
+  (interactive (list (elisp-koans//select-group current-prefix-arg)))
+  (let ((test-selector
+         (if koans
+             `(and ,@(mapcar (lambda (koan)
+                               (format "^elisp-koans/%s" koan))
+                             koans))
+           "^elisp-koans/")))
+    (ert-run-tests-interactively test-selector)))
+
+
+;;;###autoload
+(defun elisp-koans/run-test (test)
+  "Run the elisp koan TEST."
+  (interactive (list (completing-read "Run koan: " obarray #'elisp-koans//boundp)))
+  ((ert-run-tests-interactively test)))
+
 
 (provide 'elisp-koans)
 
