@@ -7,6 +7,10 @@
   
 ** Unreleased
 *** Added
+    - interactive function =elisp-koans/run-tests= for running all tests or
+      a specific koan group
+    - interactive function =elisp-koans/run-test= for running a single test
+    - koan selection to =elisp-koans/select-group=
 
 *** Changed
     - fix test names lacking =elisp-koans/= prefix
